<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/turkeyBlue_2">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_family_light"
                    android:text="@string/app_name_ch"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/white"
                    android:textSize="24sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingRight="5dp">
                <!--<ImageView-->
                    <!--android:layout_width="35dp"-->
                    <!--android:layout_height="35dp"-->
                    <!--android:src="@drawable/icon_search_white"-->
                    <!--android:layout_marginRight="5dp"/>-->
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/icon_search_white"
                    android:layout_marginRight="5dp"/>
                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@drawable/icon_menu_white"/>-->
            </LinearLayout>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="14"
            android:background="@color/white"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:gravity="center_vertical">
                <LinearLayout
                    android:id="@+id/ll_find_food"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/selector_icon_food"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/find_food"
                        android:textSize="16sp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@string/font_family_regular"
                        android:textStyle="normal"
                        android:textColor="@color/a_03"/>
                    <!--android:textStyle="normal|bold|italic"-->
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_find_drink"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/selector_icon_drink"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/find_drink"
                        android:textSize="16sp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@string/font_family_regular"
                        android:textStyle="normal"
                        android:textColor="@color/a_03"/>
                    <!--android:textStyle="normal|bold|italic"-->
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_find_any"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/selector_icon_confused"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/find_any"
                        android:textSize="16sp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@string/font_family_regular"
                        android:textStyle="normal"
                        android:textColor="@color/a_03"/>
                    <!--android:textStyle="normal|bold|italic"-->
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_find_location"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/selector_icon_location"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/find_location"
                        android:textSize="16sp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@string/font_family_regular"
                        android:textStyle="normal"
                        android:textColor="@color/a_03"/>
                    <!--android:textStyle="normal|bold|italic"-->
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">
                <TextView
                    android:id="@+id/tv_01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hello World!" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:id="@+id/ll_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hello World!"
                        android:textSize="16sp"/>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="this is Ads!" />
                <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    ads:adSize="SMART_BANNER"
                    ads:adUnitId="@string/ads_adUnitId_test">
                </com.google.android.gms.ads.AdView>
            </RelativeLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/color_210"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/tab_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_home_turkey"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textSize="12sp"
                    android:layout_marginTop="-8dp"
                    android:fontFamily="@string/font_family_light"
                    android:textStyle="normal"
                    android:textColor="@color/color_215"/>
                <!--android:textStyle="normal|bold|italic"-->
            </LinearLayout>
            <LinearLayout
                android:id="@+id/tab_favorite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_heart_white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite"
                    android:textSize="12sp"
                    android:layout_marginTop="-8dp"
                    android:fontFamily="@string/font_family_light"
                    android:textStyle="normal"
                    android:textColor="@color/color_215"/>
                <!--android:textStyle="normal|bold|italic"-->
            </LinearLayout>
            <LinearLayout
            android:id="@+id/tab_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_user_white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textSize="12sp"
                android:layout_marginTop="-8dp"
                android:fontFamily="@string/font_family_light"
                android:textStyle="normal"
                android:textColor="@color/color_215"/>
            <!--android:textStyle="normal|bold|italic"-->
        </LinearLayout>
            <LinearLayout
            android:id="@+id/tab_more"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_settings_white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:textSize="12sp"
                android:layout_marginTop="-8dp"
                android:fontFamily="@string/font_family_light"
                android:textStyle="normal"
                android:textColor="@color/color_215"/>
            <!--android:textStyle="normal|bold|italic"-->
        </LinearLayout>

        </LinearLayout>
        
    </LinearLayout>
</android.support.constraint.ConstraintLayout>