<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/turkeyBlue">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_family_light"
                    android:text="@string/app_name_ch"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/white"
                    android:textSize="22sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingRight="5dp">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/icon_search_white"
                    android:layout_marginRight="5dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_menu_white"/>
            </LinearLayout>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="14"
            android:background="@color/white"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello World!" />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ListView
                        android:id="@+id/ListView01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:id="@+id/tv_01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hello World!" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/color_210"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/tab_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_home_turkey"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/home"
                    android:textSize="12sp"
                    android:layout_marginTop="-8dp"
                    android:fontFamily="@string/font_family_light"
                    android:textStyle="normal"
                    android:textColor="@color/color_215"/>
                <!--android:textStyle="normal|bold|italic"-->
            </LinearLayout>
            <LinearLayout
                android:id="@+id/tab_favorite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_heart_white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/favorite"
                    android:textSize="12sp"
                    android:layout_marginTop="-8dp"
                    android:fontFamily="@string/font_family_light"
                    android:textStyle="normal"
                    android:textColor="@color/color_215"/>
                <!--android:textStyle="normal|bold|italic"-->
            </LinearLayout>
            <LinearLayout
            android:id="@+id/tab_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_user_white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/user"
                android:textSize="12sp"
                android:layout_marginTop="-8dp"
                android:fontFamily="@string/font_family_light"
                android:textStyle="normal"
                android:textColor="@color/color_215"/>
            <!--android:textStyle="normal|bold|italic"-->
        </LinearLayout>
            <LinearLayout
            android:id="@+id/tab_more"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_settings_white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/more"
                android:textSize="12sp"
                android:layout_marginTop="-8dp"
                android:fontFamily="@string/font_family_light"
                android:textStyle="normal"
                android:textColor="@color/color_215"/>
            <!--android:textStyle="normal|bold|italic"-->
        </LinearLayout>

        </LinearLayout>
        
    </LinearLayout>
</android.support.constraint.ConstraintLayout>